--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "rimraf dist && tsc"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/awdr74100/typescript-compiler-configuration#readme",
   "devDependencies": {
+    "rimraf": "^3.0.2",
     "typescript": "^4.7.4"
   }
 }
